--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   },
   "homepage": "https://github.com/tzc123/xtpl#readme",
   "dependencies": {
-    "webpack": "^3.10.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.10.0",
+    "webpack-clean-plugin": "^0.2.3"
   }
 }
